# tar

./: .cirrus.yml  .gitignore  .travis.yml  LICENSE  README.md  Setup.lhs  bytestring-0.9.cabal.config  cabal.haskell-ci  cabal.project  changelog  changelog.md  htar.cabal  htar.hs  stack.yaml  tar.cabal
.github/scripts/: brew.sh  env.sh
.github/workflows/: arm.yml  bounds-checking.yml  bsds.yaml  centos.yml  emulated.yml  freebsd.yaml  haskell-ci.yml  i386.yml  large-files.yml  test.yaml  windows_and_macOS.yml
Codec/Archive/: Tar.hs
Codec/Archive/Tar/: Check.hs  Create.hs  Entry.hs  Extract.hs  Files.hsc  Index.hs  LongNames.hs  Pack.hs  PackAscii.hs  Read.hs  Types.hs  Unpack.hs  Util.hs  Write.hs
Codec/Archive/Tar/Check/: Internal.hs
Codec/Archive/Tar/Index/: IntTrie.hs  Internal.hs  StringTable.hs  Utils.hs
bench/: Main.hs
htar/: LICENSE  htar.cabal  htar.hs  test-large-files.sh
test/: Properties.hs
test/Codec/Archive/Tar/: Tests.hs
test/Codec/Archive/Tar/Index/: Tests.hs
test/Codec/Archive/Tar/Index/IntTrie/: Tests.hs
test/Codec/Archive/Tar/Index/StringTable/: Tests.hs
test/Codec/Archive/Tar/Pack/: Tests.hs
test/Codec/Archive/Tar/Types/: Tests.hs
test/Codec/Archive/Tar/Unpack/: Tests.hs
test/data/: long-filepath.tar  long-symlink.tar  symlink.tar  unicode.tar
tests/: Properties.hs
