name:            tar
version:         0.6.0.0
license:         BSD3
license-file:    LICENSE
author:          Duncan Coutts <duncan@community.haskell.org>
                 Bjorn Bringert <bjorn@bringert.net>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
bug-reports:     https://github.com/haskell/tar/issues
copyright:       2007 Bjorn Bringert <bjorn@bringert.net>
                 2008-2016 Duncan Coutts <duncan@community.haskell.org>
category:        Codec
synopsis:        Reading, writing and manipulating ".tar" archive files.
description:     This library is for working with \"@.tar@\" archive files. It
                 can read and write a range of common variations of archive
                 format including V7, POSIX USTAR and GNU formats.
                 .
                 It provides support for packing and unpacking portable
                 archives. This makes it suitable for distribution but not
                 backup because details like file ownership and exact
                 permissions are not preserved.
                 .
                 It also provides features for random access to archive
                 content using an index.
build-type:      Simple
cabal-version:   2.0
extra-source-files: changelog.md
tested-with:     GHC==9.0.1,
                 GHC==8.10.4, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4,
                 GHC==8.2.2, GHC==8.0.2

source-repository head
  type: git
  location: https://github.com/haskell/tar.git

library
  default-language: Haskell2010
  build-depends: tar-internal

  reexported-modules:
    Codec.Archive.Tar,
    Codec.Archive.Tar.Entry,
    Codec.Archive.Tar.Check,
    Codec.Archive.Tar.Index

library tar-internal
  default-language: Haskell2010
  build-depends: base       >= 4.9  && < 5,
                 array                 < 0.6,
                 bytestring >= 0.10 && < 0.12,
                 containers >= 0.2  && < 0.7,
                 deepseq    >= 1.1  && < 1.5,
                 directory  >= 1.2  && < 1.4,
                 filepath              < 1.5,
                 time                  < 1.12

  exposed-modules:
    Codec.Archive.Tar
    Codec.Archive.Tar.Entry
    Codec.Archive.Tar.Check
    Codec.Archive.Tar.Index
    Codec.Archive.Tar.Types
    Codec.Archive.Tar.Read
    Codec.Archive.Tar.Write
    Codec.Archive.Tar.Pack
    Codec.Archive.Tar.Unpack
    Codec.Archive.Tar.Index.StringTable
    Codec.Archive.Tar.Index.IntTrie
    Codec.Archive.Tar.Index.Internal

  other-extensions:
    BangPatterns
    CPP
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    PatternGuards
    ScopedTypeVariables

  ghc-options: -Wall -fno-warn-unused-imports

test-suite properties
  type:          exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends: base,
                 array,
                 bytestring >= 0.10,
                 bytestring-handle,
                 containers,
                 deepseq,
                 directory >= 1.2,
                 filepath,
                 QuickCheck       == 2.*,
                 tar-internal,
                 tasty            >= 0.10 && <1.5,
                 tasty-quickcheck >= 0.8  && <0.11,
                 time

  hs-source-dirs: test

  main-is: Properties.hs

  other-modules:
    Codec.Archive.Tar.Tests
    Codec.Archive.Tar.Index.Tests
    Codec.Archive.Tar.Index.IntTrie.Tests
    Codec.Archive.Tar.Index.StringTable.Tests
    Codec.Archive.Tar.Types.Tests

  other-extensions:
    CPP
    BangPatterns,
    DeriveDataTypeable
    ScopedTypeVariables

  ghc-options: -fno-ignore-asserts

benchmark bench
  type:          exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is:       Main.hs
  build-depends: base,
                 tar,
                 bytestring >= 0.10,
                 filepath,
                 directory >= 1.2,
                 array,
                 containers,
                 deepseq,
                 time,
                 tasty-bench
