name:            htar
version:         0.4.0.1
license:         BSD3
license-File:    LICENSE
author:          Bjorn Bringert <bjorn@bringert.net>
                 Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
copyright:       2007 Bjorn Bringert <bjorn@bringert.net>
                 2008-2015 Duncan Coutts <duncan@community.haskell.org>
category:        Codec
synopsis:        Command-line tar archive utility.
description:     A Command-line utility to create, extract and list the
                 contents of tar archives. It can work with compressed
                 archives using gzip or bzip2 compression.
                 .
                 This is in part a demo of the @tar@ library but it is also
                 usable in place of the ordinary @tar@ program for systems
                 like Windows that do not come with it as standard.
build-type:      Simple
cabal-version:   >= 1.6

flag old-locale

executable htar
  main-is: htar.hs
  ghc-options: -Wall
  build-depends:
    base       == 4.*,
    time       >= 1.1,
    directory  >= 1.0,
    filepath   >= 1.0,
    bytestring >= 0.9,
    tar        == 0.4.*,
    zlib       >= 0.4 && < 0.7,
    bzlib      >= 0.4 && < 0.7

  if flag(old-locale)
    build-depends: time < 1.5, old-locale >= 1.0
  else
    build-depends: time >= 1.5

