name:            htar
version:         0.4.0.2
license:         BSD3
license-File:    LICENSE
author:          Bjorn Bringert <bjorn@bringert.net>
                 Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
copyright:       2007 Bjorn Bringert <bjorn@bringert.net>
                 2008-2015 Duncan Coutts <duncan@community.haskell.org>
category:        Codec
synopsis:        Command-line tar archive utility.
description:     A Command-line utility to create, extract and list the
                 contents of tar archives. It can work with compressed
                 archives using gzip or bzip2 compression.
                 .
                 This is in part a demo of the @tar@ library but it is also
                 usable in place of the ordinary @tar@ program for systems
                 like Windows that do not come with it as standard.
build-type:      Simple
cabal-version:   2.0
tested-with:     GHC==9.12.1, GHC==9.10.1, GHC==9.8.4,
                 GHC==9.6.5, GHC==9.4.8, GHC==9.2.8, GHC==9.0.2,
                 GHC==8.10.7, GHC==8.8.4, GHC==8.6.5

executable htar
  default-language: Haskell2010
  main-is: htar.hs
  ghc-options: -Wall -rtsopts
  build-depends:
    base       >= 4.12 && < 5,
    time       >= 1.1,
    directory  >= 1.0,
    filepath   >= 1.4.100,
    bytestring >= 0.9,
    tar        >= 0.4.2,
    zlib       >= 0.4 && < 0.8,
    bzlib      >= 0.4 && < 0.7,
    time       >= 1.5

